# DCL_CvBasic

./: .gitignore  CMakeLists.txt  README.md
CameraOpenCV/: CMakeLists.txt
CvMorphology/: CMakeLists.txt
CvPixelOperator/: CMakeLists.txt
CvSolvePnP/: CMakeLists.txt
CvUndistort/: CMakeLists.txt
Sequence/: CMakeLists.txt
data/: CMakeLists.txt  download.cmake.in
src/: CMakeLists.txt  CvBasicConfig.cmake.in
src/Components/: CMakeLists.txt
src/Components/CalcObjectLocation/: CMakeLists.txt  CalcObjectLocation.cpp  CalcObjectLocation.hpp
src/Components/CalcStatistics/: CMakeLists.txt  CalcStatistics.cpp  CalcStatistics.hpp
src/Components/Calib/: CMakeLists.txt  Calib.cpp  Calib.hpp
src/Components/CameraCalib/: CMakeLists.txt  CameraCalib.cpp  CameraCalib.h
src/Components/CameraOpenCV/: CameraOpenCV_Source.cpp  CameraOpenCV_Source.hpp
src/Components/CvAdaptiveThreshold/: CMakeLists.txt  CvAdaptiveThreshold.cpp  CvAdaptiveThreshold.hpp
src/Components/CvBRIEF/: CMakeLists.txt  CvBRIEF.cpp  CvBRIEF.hpp
src/Components/CvBRISK/: CMakeLists.txt  CvBRISK.cpp  CvBRISK.hpp
src/Components/CvBayesClassifier/: CMakeLists.txt  CvBayesClassifier.cpp  CvBayesClassifier.hpp
src/Components/CvBruteForce/: CMakeLists.txt  CvBruteForce.cpp  CvBruteForce.hpp
src/Components/CvCanny/: CMakeLists.txt  CvCanny.cpp  CvCanny.hpp
src/Components/CvColorConv/: CMakeLists.txt  CvColorConv_Processor.cpp  CvColorConv_Processor.hpp
src/Components/CvContour/: CMakeLists.txt  CvContour.cpp  CvContour.hpp
src/Components/CvFAST/: CMakeLists.txt  CvFAST.cpp  CvFAST.hpp
src/Components/CvFilter2D/: CMakeLists.txt  CvFilter2D_Processor.cpp  CvFilter2D_Processor.hpp
src/Components/CvFindChessboardCorners/: CMakeLists.txt  CvFindChessboardCorners_Processor.cpp  CvFindChessboardCorners_Processor.hpp
src/Components/CvFindCirclesGrid/: CMakeLists.txt  CvFindChessboardCorners_Processor.cpp~  CvFindCirclesGrid_Processor.cpp  CvFindCirclesGrid_Processor.hpp
src/Components/CvFlann/: CMakeLists.txt  CvFlann.cpp  CvFlann.hpp
src/Components/CvFreak/: CMakeLists.txt  CvFreak.cpp  CvFreak.hpp
src/Components/CvGaussianBlur/: CMakeLists.txt  CvGaussianBlur_Processor.cpp  CvGaussianBlur_Processor.hpp
src/Components/CvHarris/: CMakeLists.txt  CvHarris.cpp  CvHarris.hpp
src/Components/CvHoughCircles/: CMakeLists.txt  CvHoughCircles.cpp  CvHoughCircles.hpp
src/Components/CvHoughLines/: CMakeLists.txt  CvHoughLines.cpp  CvHoughLines.hpp
src/Components/CvMSER/: CMakeLists.txt  CvMSER.cpp  CvMSER.hpp
src/Components/CvMoments/: CMakeLists.txt  CvMoments.cpp  CvMoments.hpp
src/Components/CvMorphology/: CvMorphology_Processor.cpp  CvMorphology_Processor.hpp
src/Components/CvORB/: CMakeLists.txt  CvORB.cpp  CvORB.hpp
src/Components/CvSIFT/: CMakeLists.txt  CvSIFT.cpp  CvSIFT.hpp
src/Components/CvSURF/: CMakeLists.txt  CvSURF.cpp  CvSURF.hpp
src/Components/CvSolvePnP/: CvSolvePnP_Processor.cpp  CvSolvePnP_Processor.hpp
src/Components/CvSplit/: CMakeLists.txt  CvSplit_Processor.cpp  CvSplit_Processor.hpp
src/Components/CvStarDetector/: CMakeLists.txt  CvStarDetector.cpp  CvStarDetector.hpp
src/Components/CvThreshold/: CMakeLists.txt  CvThreshold_Processor.cpp  CvThreshold_Processor.hpp
src/Components/CvUndistort/: CvUndistort_Processor.cpp  CvUndistort_Processor.hpp
src/Components/CvVideoWriter/: CMakeLists.txt  CvVideoWriter_Sink.cpp  CvVideoWriter_Sink.hpp
src/Components/CvWindow/: CMakeLists.txt  CvWindow_Sink.cpp  CvWindow_Sink.hpp
src/Components/DrawCoordinateSystem/: CMakeLists.txt  DrawCoordinateSystem.cpp  DrawCoordinateSystem.hpp
src/Components/FeatureDetector/: CMakeLists.txt  FeatureDetector.cpp  FeatureDetector.hpp
src/Components/FindHomography/: CMakeLists.txt  FindHomography.cpp  FindHomography.hpp
src/Components/HSVLUT/: CMakeLists.txt  HSVLUT.cpp  HSVLUT.hpp
src/Components/HomogenousMatrixProvider/: CMakeLists.txt  HomogenousMatrixProvider.cpp  HomogenousMatrixProvider.hpp
src/Components/ImageWriter/: CMakeLists.txt  ImageWriter.cpp  ImageWriter.hpp
src/Components/MaskAggregator/: CMakeLists.txt  MaskAggregator.cpp  MaskAggregator.hpp
src/Components/Movie/: CMakeLists.txt  Movie_Source.cpp  Movie_Source.hpp
src/Components/PerspectiveTransform/: CMakeLists.txt  PerspectiveTransform.cpp  PerspectiveTransform.hpp
src/Components/RGBLUT/: CMakeLists.txt  RGBLUT.cpp  RGBLUT.hpp
src/Components/RotateImage/: CMakeLists.txt  RotateImage.cpp  RotateImage.hpp
src/Components/Sequence/: Sequence.cpp  Sequence.hpp
src/Components/Skeletonization/: CMakeLists.txt  Skeletonization.cpp  Skeletonization.hpp
src/Components/Sum/: CMakeLists.txt  Sum.cpp  Sum.hpp
src/Components/Trigger/: CMakeLists.txt  Trigger.cpp  Trigger.hpp  Trigger.hpp.orig
src/Components/ViewSequence/: CMakeLists.txt  ViewSequence.cpp  ViewSequence.hpp
src/Types/: CMakeLists.txt  CameraInfo.hpp  Drawable.hpp  DrawableContainer.hpp  Ellipse.hpp  Features.hpp  Line.hpp  Points.hpp  Text.hpp  stream_OpenCV.hpp
src/Types/Circles/: CMakeLists.txt  Circles.cpp  Circles.hpp
src/Types/Objects3D/: Chessboard.hpp  GridPattern.hpp  Object3D.hpp
tasks/: CameraViewer.xml  DetectCircles.xml  Keypoints.xml  Keypoints23.xml  MultipleSequenceViewer.xml  RefreshedSequenceViewer.xml  SequenceViewer.xml  TriggeredSequenceViewer.xml  ViewSequence.xml  calibrate.xml  task.xml  undistort.xml
